--- a/index.html
+++ b/index.html
@@ -2,54 +2,93 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TechSprout</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-  </style>
+
+  <!-- AOS CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+
+  <!-- Header -->
   <header>
-    <section class="hero">
-      <div class="hero-content">
-        <h1>Welcome to TechSprout</h1>
-        <p>Launching Future Innovators with Internships & AI</p>
-        <a href="#internship" class="btn">Explore Internships</a>
-      </div>
-    </section>
-    <img src="logo.png" alt="TechSprout Logo" width="200">
-    <h1>TechSprout</h1>
+    <h2 class="logo">TechSprout</h2>
     <nav>
-      <a href="#about">About</a> |
-      <a href="#internship">Internship</a> |
+      <a href="#about">About</a>
+      <a href="#internship">Internships</a>
+      <a href="#testimonials">Testimonials</a>
       <a href="#contact">Contact</a>
+      <button id="darkToggle">🌙</button>
     </nav>
   </header>
 
-  <section id="internship" class="card-section">
-    <h2>Our Internship Tracks</h2>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1 class="fade-in">Welcome to <span>TechSprout</span></h1>
+      <p class="fade-in delay">Empowering Students Through AI & Internships</p>
+      <a href="#internship" class="btn fade-in delay2">Explore Programs</a>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="section" data-aos="fade-up">
+    <h2>About Us</h2>
+    <p>TechSprout is a startup focused on helping students gain real-world skills through AI, Web, and App Development internships.</p>
+  </section>
+
+  <!-- Internships -->
+  <section id="internship" class="section" data-aos="fade-up">
+    <h2>Internship Tracks</h2>
     <div class="cards">
       <div class="card">
-        <h3>AI Development</h3>
-        <p>Work on real-world ML and GenAI projects.</p>
+        <h3>💻 Web Development</h3>
+        <p>Create and deploy websites using HTML, CSS, JS, React.</p>
       </div>
       <div class="card">
-        <h3>Web Development</h3>
-        <p>Build websites, dashboards, and frontend tools.</p>
+        <h3>🤖 AI & ML</h3>
+        <p>Build smart apps using Python, NLP, and Machine Learning.</p>
       </div>
       <div class="card">
-        <h3>Backend Engineering</h3>
-        <p>Work on APIs, databases, and cloud infra (AWS).</p>
+        <h3>📱 App Development</h3>
+        <p>Develop Android apps using Flutter and Firebase.</p>
       </div>
     </div>
   </section>
 
+  <!-- Testimonials -->
+  <section id="testimonials" class="section" data-aos="fade-up">
+    <h2>What Students Say</h2>
+    <blockquote>"The TechSprout internship helped me get hired!" — Aishwarya, B.Tech</blockquote>
+    <blockquote>"I learned more in 2 months than in college!" — Rohit, CSE Student</blockquote>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section" data-aos="fade-up">
+    <h2>Contact Us</h2>
+    <p>Fill out the form below to reach us:</p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScr8SAybdmKlwyyMBYgGU6lZ3F5rhv8TROgDTAJlz_4uvvUsQ/viewform?embedded=true" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Your Company. All rights reserved.</p>
+    <p>© 2025 TechSprout. All rights reserved.</p>
+    <div class="social">
+      <a href="#"><img src="https://img.icons8.com/ios-filled/24/github.png"/></a>
+      <a href="#"><img src="https://img.icons8.com/ios-filled/24/linkedin.png"/></a>
+    </div>
   </footer>
+
+  <!-- Scripts -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+
+    const toggleBtn = document.getElementById('darkToggle');
+    toggleBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+  </script>
 </body>
 </html>
