--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TechSprout</title>
+  <title>AI TechWill</title>
   <link rel="stylesheet" href="style.css" />
 
   <!-- AOS CSS -->
@@ -13,7 +13,7 @@
 
   <!-- Header -->
   <header>
-    <h2 class="logo">TechSprout</h2>
+    <h2 class="logo">logo.png</h2>
     <nav>
       <a href="#about">About</a>
       <a href="#internship">Internships</a>
@@ -26,7 +26,7 @@
   <!-- Hero -->
   <section class="hero">
     <div class="hero-content">
-      <h1 class="fade-in">Welcome to <span>TechSprout</span></h1>
+      <h1 class="fade-in">Welcome to <span>AI TechWill</span></h1>
       <p class="fade-in delay">Empowering Students Through AI & Internships</p>
       <a href="#internship" class="btn fade-in delay2">Explore Programs</a>
     </div>
@@ -35,7 +35,7 @@
   <!-- About -->
   <section id="about" class="section" data-aos="fade-up">
     <h2>About Us</h2>
-    <p>TechSprout is a startup focused on helping students gain real-world skills through AI, Web, and App Development internships.</p>
+    <p>AI TechWill is a startup focused on helping students gain real-world skills through AI, Web, and App Development internships.</p>
   </section>
 
   <!-- Internships -->
@@ -60,7 +60,7 @@
   <!-- Testimonials -->
   <section id="testimonials" class="section" data-aos="fade-up">
     <h2>What Students Say</h2>
-    <blockquote>"The TechSprout internship helped me get hired!" — Aishwarya, B.Tech</blockquote>
+    <blockquote>"The AI TechWill internship helped me get hired!" — Aishwarya, B.Tech</blockquote>
     <blockquote>"I learned more in 2 months than in college!" — Rohit, CSE Student</blockquote>
   </section>
 
@@ -73,7 +73,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 TechSprout. All rights reserved.</p>
+    <p>© 2025 AI TechWill. All rights reserved.</p>
     <div class="social">
       <a href="#"><img src="https://img.icons8.com/ios-filled/24/github.png"/></a>
       <a href="#"><img src="https://img.icons8.com/ios-filled/24/linkedin.png"/></a>
