--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Header -->
   <header>
-    <h2 class="logo">logo.png</h2>
+    <h2 class="logo">AI TechWill</h2>
     <nav>
       <a href="#about">About</a>
       <a href="#internship">Internships</a>
