--- a/index.html
+++ b/index.html
@@ -2,93 +2,110 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI TechWill</title>
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- AOS CSS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+    }
+    body {
+      background: #f4f4f9;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      margin-top: 10px;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      background: #27ae60;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    footer {
+      background: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 500px;
+      max-width: 600px;
+    }
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 24px;
+      }
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Header -->
   <header>
-    <h2 class="logo">AI TechWill</h2>
+    <h1 data-aos="zoom-in">Welcome to AI TechWill</h1>
+    <p data-aos="fade-up">Empowering Future Engineers with AI & Tech Internships</p>
     <nav>
       <a href="#about">About</a>
-      <a href="#internship">Internships</a>
-      <a href="#testimonials">Testimonials</a>
+      <a href="#services">Internships</a>
       <a href="#contact">Contact</a>
-      <button id="darkToggle">🌙</button>
     </nav>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1 class="fade-in">Welcome to <span>AI TechWill</span></h1>
-      <p class="fade-in delay">Empowering Students Through AI & Internships</p>
-      <a href="#internship" class="btn fade-in delay2">Explore Programs</a>
-    </div>
-  </section>
-
-  <!-- About -->
-  <section id="about" class="section" data-aos="fade-up">
+  <section id="about" data-aos="fade-right">
     <h2>About Us</h2>
-    <p>AI TechWill is a startup focused on helping students gain real-world skills through AI, Web, and App Development internships.</p>
+    <p>AI TechWill is a platform built to provide hands-on tech experience for engineering students across India through innovative AI-driven projects and app development internships.</p>
   </section>
 
-  <!-- Internships -->
-  <section id="internship" class="section" data-aos="fade-up">
-    <h2>Internship Tracks</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>💻 Web Development</h3>
-        <p>Create and deploy websites using HTML, CSS, JS, React.</p>
-      </div>
-      <div class="card">
-        <h3>🤖 AI & ML</h3>
-        <p>Build smart apps using Python, NLP, and Machine Learning.</p>
-      </div>
-      <div class="card">
-        <h3>📱 App Development</h3>
-        <p>Develop Android apps using Flutter and Firebase.</p>
-      </div>
-    </div>
+  <section id="services" data-aos="fade-left">
+    <h2>Internships</h2>
+    <p>We offer internships in app development, machine learning, and real-world AI solutions. Each student receives mentoring, certificates, and practical exposure.</p>
+    <a href="#contact" class="btn">Apply Now</a>
   </section>
 
-  <!-- Testimonials -->
-  <section id="testimonials" class="section" data-aos="fade-up">
-    <h2>What Students Say</h2>
-    <blockquote>"The AI TechWill internship helped me get hired!" — Aishwarya, B.Tech</blockquote>
-    <blockquote>"I learned more in 2 months than in college!" — Rohit, CSE Student</blockquote>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="section" data-aos="fade-up">
+  <section id="contact" data-aos="fade-up">
     <h2>Contact Us</h2>
-    <p>Fill out the form below to reach us:</p>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScr8SAybdmKlwyyMBYgGU6lZ3F5rhv8TROgDTAJlz_4uvvUsQ/viewform?embedded=true" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <p>Have questions or want to join our internship program? Fill out the form below!</p>
+    <!-- Replace this iframe with your real Google Form embed code -->
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDUMMYFORM/viewform?embedded=true">Loading…</iframe>
   </section>
 
-  <!-- Footer -->
   <footer>
-    <p>© 2025 AI TechWill. All rights reserved.</p>
-    <div class="social">
-      <a href="#"><img src="https://img.icons8.com/ios-filled/24/github.png"/></a>
-      <a href="#"><img src="https://img.icons8.com/ios-filled/24/linkedin.png"/></a>
-    </div>
+    <p>&copy; 2025 AI TechWill. All rights reserved.</p>
   </footer>
 
-  <!-- Scripts -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- AOS Animations -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init();
-
-    const toggleBtn = document.getElementById('darkToggle');
-    toggleBtn.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-    });
   </script>
+
 </body>
 </html>
