Logo code update

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
   </style>
 </head>
 <body>
+  <div class="logo-container">
+    <div class="rotating-ring"></div>
+    <img src="logo.png" alt="AITechWill Logo" class="logo-core" />
+    <p class="logo-quote">"Rooted in Code. Rising with Will"</p>
+  </div>
 
   <header>
     <h1 data-aos="zoom-in">Welcome to AI TechWill</h1>
