--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email us at <a href="mailto:info@aitechwill.com">info@aitechwill.com</a></p>
+    <p>Email us at <a href="aitechwill.cloud@gmail.com">info@aitechwill.com</a></p>
   </section>
 
   <!-- Footer -->
