--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   <section class="logo-section">
     <div class="logo-container">
       <div class="logo-ring"></div>
-      <img src="logo.png" alt="AI TechWill Logo" class="logo-img" />
-      <p class="logo-quote">"Rooted in Code. Rising with Will"</p>
+      <img src="logo.png" alt="logo2.png" class="logo-img" />
     </div>
   </section>
 
   <!-- Hero Section -->
   <header>
-    <div class="logo">AI TechWill</div>
+    <div class="logo2.png"></div>
     <nav>
       <a href="#about">About</a>
       <a href="#internships">Internships</a>
