--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
 </head>
 <body>
 
-  <!-- Logo Section -->
-  <section class="logo-section">
-    <div class="logo-container">
-      <div class="logo-ring"></div>
-      <img src="logo.png" alt="logo2.png" class="logo-img" />
-    </div>
-  </section>
-
-  <!-- Hero Section -->
+  <!-- Header -->
   <header>
-    <div class="logo2.png"></div>
+    <div class="header-left">
+      <img src="logo.png" alt="AI TechWill Logo" class="small-logo" />
+      <img src="logo2.png" alt="AI TechWill Logo with Name" class="logo-with-name" />
+    </div>
     <nav>
       <a href="#about">About</a>
       <a href="#internships">Internships</a>
@@ -26,6 +21,7 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <h1>Welcome to <span>AI TechWill</span></h1>
     <p>Empowering Future Engineers with AI & Tech Internships</p>
