--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <header>
     <div class="header-left">
       <img src="logo.png" alt="AI TechWill Logo" class="small-logo" />
-      <img src="logo2.png" alt="AI TechWill Logo with Name" class="logo-with-name" />
     </div>
     <nav>
       <a href="#about">About</a>
@@ -29,7 +28,10 @@
   <!-- Hero -->
   <section class="hero">
     <div class="hero-content">
-      <h1 class="fade-in">Welcome to <span>AI TechWill</span></h1>
+      <h1 class="fade-in">
+        Welcome to
+        <img src="logo2.png" alt="AI TechWill" class="inline-logo" />
+      </h1>
       <p class="fade-in delay">Empowering Students Through AI & Internships</p>
       <a href="#internship" class="btn fade-in delay2">Explore Programs</a>
     </div>
@@ -70,7 +72,7 @@
   <!-- Contact -->
   <section id="contact" class="section" data-aos="fade-up">
     <h2>Contact Us</h2>
-    <p>Email us at <a href="aitechwill.cloud@gmail.com">info@aitechwill.com</a></p>
+    <p>Email us at <a href="aitechwill.cloud@gmail.com">aitechwill.cloud@gmail.com</a></p>
     <p>Fill out the form below to reach us:</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScr8SAybdmKlwyyMBYgGU6lZ3F5rhv8TROgDTAJlz_4uvvUsQ/viewform?embedded=true" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </section>
