updated with mobile friendly

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI TechWill</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,25 +17,25 @@
   <!-- Header -->
   <header>
     <div class="header-left">
-      <img src="logo.png" alt="AI TechWill Logo" class="small-logo" />
-    </div>
+      <img src="AITechWill_Logo.png" alt="AI TechWill Logo" class="small-logo" />
+      <img src="logo2.png" alt="AI TechWill" class="inline-logo" />
+      </div>    
     <nav>
       <a href="#about">About</a>
       <a href="#internship">Internships</a>
       <a href="#testimonials">Testimonials</a>
       <a href="#contact">Contact</a>
-      <button id="darkToggle" title="Toggle Dark Mode">
+      <button id="darkToggle" title="Toggle Dark Mode" aria-label="Toggle Dark Mode">
         <i class="fas fa-moon"></i>
-      </button>
+      </button>      
     </nav>
   </header>
 
   <!-- Hero -->
-  <section class="hero">
+  <section id="hero">
     <div class="hero-content">
       <h1 class="fade-in">
-        Welcome to
-        <img src="logo2.png" alt="AI TechWill" class="inline-logo" />
+        Welcome to <span class="bigger-text">AI TechWill</span>
       </h1>
       <p class="fade-in delay">Empowering Students Through AI & Internships</p>
       <a href="#internship" class="btn fade-in delay2">Explore Programs</a>
@@ -70,13 +70,13 @@
   <!-- Testimonials -->
   <section id="testimonials" class="section" data-aos="fade-up">
     <h2>What Students Say</h2>
-    <blockquote>"The AI TechWill internship helped me get hired!" — Aishwarya, B.Tech</blockquote>
-    <blockquote>"I learned more in 2 months than in college!" — Rohit, CSE Student</blockquote>
-    <blockquote>"AI TechWill gave me hands-on experience in real projects. The mentors were supportive, and I feel confident about my career in tech now!" Sravani M., B.Tech CSE Student</blockquote>
-    <blockquote>“Unlike typical internships, here I actually built a working app with a team. It felt like a startup experience!” — Rohan K., Final Year IT Student</blockquote>
-    <blockquote>“Learning AI with real guidance, weekly tasks, and reviews helped me build my GitHub profile. Highly recommended.” — Neha R., AI/ML Enthusiast</blockquote>
-    <blockquote>“Their UI/UX and full-stack projects helped me land an interview at a top startup. Worth the time!” — Aditya P., Recent Graduate</blockquote>
-    <blockquote>“Clear communication, real deadlines, and career tips—this was not just an internship, it was a turning point.” — Divya T., 3rd Year ECE</blockquote>
+    <blockquote>"The AI TechWill internship helped me get hired!" — <strong>Aishwarya, B.Tech</strong></blockquote>
+    <blockquote>"I learned more in 2 months than in college!" — <strong>Rohit, CSE Student</strong></blockquote>
+    <blockquote>"AI TechWill gave me hands-on experience in real projects. The mentors were supportive, and I feel confident about my career in tech now!" - <strong>Sravani M., B.Tech CSE Student</strong></blockquote>
+    <blockquote>“Unlike typical internships, here I actually built a working app with a team. It felt like a startup experience!” — <strong>Rohan K., Final Year IT Student</strong></blockquote>
+    <blockquote>“Learning AI with real guidance, weekly tasks, and reviews helped me build my GitHub profile. Highly recommended.” — <strong>Neha R., AI/ML Enthusiast</strong></blockquote>
+    <blockquote>“Their UI/UX and full-stack projects helped me land an interview at a top startup. Worth the time!” — <strong>Aditya P., Recent Graduate</strong></blockquote>
+    <blockquote>“Clear communication, real deadlines, and career tips—this was not just an internship, it was a turning point.” — <strong>Divya T., 3rd Year ECE</strong></blockquote>
   </section>
 
   <!-- Contact -->
