--- a/index.html
+++ b/index.html
@@ -37,15 +37,18 @@
       <h1 class="fade-in">
         Welcome to <span class="bigger-text">AI TechWill</span>
       </h1>
-      <p class="fade-in delay">Empowering Students Through AI & Internships</p>
-      <a href="#internship" class="btn fade-in delay2">Explore Programs</a>
+      <p class="fade-in delay">
+        Internships • Certification Training • Job Placement • Hiring for Projects
+      </p>
+      <a href="#internship" class="btn fade-in delay2">Start Your Career Journey</a>
     </div>
   </section>
 
   <!-- About -->
   <section id="about" class="section" data-aos="fade-up">
     <h2>About Us</h2>
-    <p>AI TechWill is a startup focused on helping students to gain real-world skills through AI, Web, and App Development internships.</p>
+    <p>
+      <strong>AI TechWill</strong> is career-focused platform for engineering students and fresh graduates. We offer hands-on <strong>internships</strong> in AI, web, and app developments, <strong>training programs with certifications</strong>, and direct support for <strong>job placements</strong> in the tech industry. We also <strong>hire skilled interns and developers</strong> for real-world projects. Whether you're a student or a company, we're your bridge to success.</p>
   </section>
 
   <!-- Internships -->
@@ -70,6 +73,7 @@
   <!-- Testimonials -->
   <section id="testimonials" class="section" data-aos="fade-up">
     <h2>What Students Say</h2>
+    <p>Real stories from students who completed internships, earned certifications, and landed tech jobs with AI TechWill's guidance.</p>
     <blockquote>"The AI TechWill internship helped me get hired!" — <strong>Aishwarya, B.Tech</strong></blockquote>
     <blockquote>"I learned more in 2 months than in college!" — <strong>Rohit, CSE Student</strong></blockquote>
     <blockquote>"AI TechWill gave me hands-on experience in real projects. The mentors were supportive, and I feel confident about my career in tech now!" - <strong>Sravani M., B.Tech CSE Student</strong></blockquote>
@@ -78,6 +82,18 @@
     <blockquote>“Their UI/UX and full-stack projects helped me land an interview at a top startup. Worth the time!” — <strong>Aditya P., Recent Graduate</strong></blockquote>
     <blockquote>“Clear communication, real deadlines, and career tips—this was not just an internship, it was a turning point.” — <strong>Divya T., 3rd Year ECE</strong></blockquote>
   </section>
+
+  <!-- How It Works -->
+  <section class="section" data-aos="fade-up">
+    <h2>How It Works</h2>
+    <ol>
+      <li><strong>Step 1:</strong> Apply for an Internship Track (AI, Web, or App)</li>
+      <li><strong>Step 2:</strong> Get Certified with Weekly Training & Projects</li>
+      <li><strong>Step 3:</strong> Build a Portfolio & Resume</li>
+      <li><strong>Step 4:</strong> Receive Job Placement Assistance</li>
+      <li><strong>Step 5:</strong> Get Hired or Work on Real Client Projects</li>
+    </ol>
+  </section>  
 
   <!-- Contact -->
   <section id="contact" class="section" data-aos="fade-up">
